Finished computations on 2

--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -957,7 +957,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "metrics.accuracy_score(pred, newsgroups_valid)"
@@ -992,22 +994,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "rows = []\n",
     "# We made a few tries already to determine which values yield better results.\n",
     "# We have a double for loop. Which is aweful and will take a lot of time, but necessary.\n",
-    "for i in range(40, 100, 10): #making sure the depth is not better above 30\n",
-    "    for j in range(200, 1100, 100): #step of 100 to not take too much time\n",
-    "        clf = RandomForestClassifier(n_estimators=j, max_depth=i, random_state=1)\n",
+    "for i in range(30, 160, 10): #making sure the depth is not better above 30\n",
+    "    for j in range(300, 1100, 100): #step of 100 to not take too much time\n",
+    "        clf = RandomForestClassifier(n_estimators=j, max_depth=i)\n",
     "        clf.fit(vect_train, newsgroups_train)\n",
     "        pred = clf.predict(vect_valid)\n",
-    "        pred_result = metrics.accuracy_score(newsgroups_valid, pred, average='macro')\n",
+    "        pred_result = metrics.accuracy_score(newsgroups_valid, pred)\n",
     "        # uncomment next line to be able to know where computation is at\n",
-    "        # print(i,\" ; \", j)\n",
+    "        print(i,\" ; \", j)\n",
     "        rows.append([i, j, pred_result])"
    ]
   },
@@ -1015,8 +1016,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators=400, max_depth=100, random_state=0)\n",
+    "clf.fit(vect_train, newsgroups_train)\n",
+    "pred = clf.predict(vect_valid)\n",
+    "metrics.accuracy_score(newsgroups_valid, pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators=200, max_depth=200, random_state=0)\n",
+    "clf.fit(vect_train, newsgroups_train)\n",
+    "pred = clf.predict(vect_valid)\n",
+    "metrics.accuracy_score(newsgroups_valid, pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "all_predictions = pd.DataFrame(rows, columns=columns) # we get all the predictions in a dataframe\n",
@@ -1024,6 +1049,29 @@
     "all_predictions = all_predictions.sort_values(by=['Prediction'], ascending=False)\n",
     "# we show the best 10\n",
     "all_predictions.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving the pickle. Do not run if we did not make a new pandas.\n",
+    "# all_predictions.to_pickle(\"all_predictions.pkl\")\n",
+    "# read the pickle.\n",
+    "# all_predictions = pd.read_pickle(\"all_predictions.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "90 \t800 \t0.680106\n",
+    "\n",
+    "90 \t900 \t0.679576\n",
+    "\n",
+    "90 \t500 \t0.678515"
    ]
   },
   {
@@ -1038,7 +1086,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clf = RandomForestClassifier(n_estimators=800, max_depth=47, random_state=1)\n",
@@ -1050,7 +1100,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "metrics.accuracy_score(pred, newsgroups_valid)"
@@ -1066,7 +1118,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pred_test = clf.predict(vect_valid)\n",
@@ -1079,13 +1133,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tu be able to read this matrix, lets put it into a DataFrame and add the right column names, then show the heatmap."
+    "To be able to read this matrix, lets put it into a DataFrame and add the right column names, then show the heatmap."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.DataFrame(cm)\n",
@@ -1105,7 +1161,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#get names of features and their importance\n",
@@ -1124,7 +1182,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.hist(clf.feature_importances_, bins=50)\n",
