--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#imports (same as tuto ML)\n",
@@ -110,9 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#masks to be used alot later\n",
@@ -170,7 +166,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -214,10 +209,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.boxplot([treated_salary, untreated_salary], labels=['treated', 'untreated'], showfliers=False)\n",
-    "plt.title('Distribution of salary by treated')\n",
-    "plt.ylabel('Salary')\n",
-    "plt.show()"
+    "def boxplot_treat_untreat(treated_salary, untreated_salary):\n",
+    "    \"\"\"draws boxplot of distribution of salary \"\"\"\n",
+    "    plt.boxplot([treated_salary, untreated_salary], labels=['treated', 'untreated'], showfliers=False)\n",
+    "    plt.title('Distribution of salary by treated and untreated')\n",
+    "    plt.ylabel('Salary')\n",
+    "    plt.show()\n",
+    "\n",
+    "boxplot_treat_untreat(treated_salary, untreated_salary)"
    ]
   },
   {
@@ -261,9 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "categorical = ['black', 'hispan', 'married', 'nodegree']\n",
@@ -494,12 +491,13 @@
    "source": [
     "#we define a function that compares interval data, will be used again for 1.4\n",
     "\n",
+    "#defining list of non binary variables\n",
+    "intervals = ['age', 'educ', 're74', 're75'] #is reused in later fuction\n",
+    "\n",
     "def intervall_plots(df):\n",
     "    \"\"\"constructs boxplot and relative frequency histogram for data frame\n",
     "    df: dataframe to be analyzed\n",
     "    \"\"\"\n",
-    "    #defining list of non binary variables\n",
-    "    intervals = ['age', 'educ', 're74', 're75']\n",
     "    #for each column draw a Boxplot\n",
     "    for col in intervals:\n",
     "        plt.figure(figsize=(10, 10))\n",
@@ -550,9 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Implement parallel plot\n",
@@ -600,9 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#defining mask for white\n",
@@ -646,9 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for year in years:\n",
@@ -693,9 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for year in years:\n",
@@ -778,9 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "prop_table = lalonde_df.copy() #otherwise we modify lalonde_df when we modify prop_table"
@@ -789,9 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#create our target and training data:\n",
@@ -819,9 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Example of prediction : \", logistic.predict(X[0:6]), ' reality :', y[0:6])\n",
@@ -831,9 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#get propensity scores, probability of \"being a subject\"\n",
@@ -875,9 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -906,9 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#3. Find matching\n",
@@ -947,9 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10, 10))\n",
@@ -988,9 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "matched_percentages = matched.groupby('treat')[categorical].mean() #unbalanced\n",
@@ -1014,9 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "intervall_plots(matched)"
@@ -1037,30 +1009,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "def compare_groups(table) :\n",
-    "    columns = ['untreated', 'treated']\n",
-    "    index = ['age', 'educ', 'black', 'hisp', 'married', 'no_degree']\n",
-    "    result = pd.DataFrame(columns=columns, index=index)\n",
-    "    result['untreated']['age'] = table['age_y'].mean()\n",
-    "    result['untreated']['educ'] = table['educ_y'].mean()\n",
-    "    result['untreated']['black'] = table['black_y'].mean()\n",
-    "    result['untreated']['hisp'] = table['hispan_y'].mean()\n",
-    "    result['untreated']['married'] = table['married_y'].mean()\n",
-    "    result['untreated']['no_degree'] = table['nodegree_y'].mean()\n",
-    "    result['treated']['age'] = table['age_x'].mean()\n",
-    "    result['treated']['educ'] = table['educ_x'].mean()\n",
-    "    result['treated']['black'] = table['black_x'].mean()\n",
-    "    result['treated']['hisp'] = table['hispan_x'].mean()\n",
-    "    result['treated']['married'] = table['married_x'].mean()\n",
-    "    result['treated']['no_degree'] = table['nodegree_x'].mean()\n",
-    "    return result"
+    "Based on your comparison of feature-value distributions from part 4, are you fully satisfied with your matching?\n",
+    "Would you say your dataset is sufficiently balanced?\n",
+    "If not, in what ways could the \"balanced\" dataset you have obtained still not allow you to draw valid conclusions?\n",
+    "\n",
+    "Improve your matching by explicitly making sure that you match only subjects that have the same value for the problematic feature.\n",
+    "Argue with numbers and plots that the two groups (treated and control) are now better balanced than after part 4."
    ]
   },
   {
@@ -1070,7 +1027,9 @@
     "We noted above there are still way more black subjects in the treated group than in the untreated group.\n",
     "Additionaly, we still have outliers in the treated group.\n",
     "\n",
-    "We try to balance the both groups by removing white subjects matched with outlying black subjects"
+    "We try to balance the both groups by removing white subjects matched with black subjects.\n",
+    "We als balance the distribution of teh hispanic subjects in both groups\n",
+    "We first merge the two dataframes to have the matched subjects side by side:"
    ]
   },
   {
@@ -1079,6 +1038,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#mergin dataframe and adding propensity score difference column .. do we still need this?\n",
     "matched['match'] = matched['id'].map(matching_dict)\n",
     "balanced_match = matched[treated(matched)].merge(matched[untreated(matched)], left_on='id', right_on='match')\n",
     "balanced_match['difference'] = abs(balanced_match['propensity_scores_x'] - balanced_match['propensity_scores_y'])\n",
@@ -1087,42 +1047,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now remove the matched pairs that are white/black."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#matches that are black/white missmatched and have a large difference in propensity scores\n",
-    "race_bool_1 = (balanced_match['black_x'] == 1) & (balanced_match['black_y'] == 0) & (balanced_match['hispan_y'] == 0)\n",
-    "race_bool_2 = (balanced_match['black_x'] == 1) & (balanced_match['black_y'] == 0) & (balanced_match['hispan_y'] == 1)\n",
-    "balanced_match = balanced_match.drop(balanced_match[race_bool_1 | race_bool_2].index)\n",
+    "#matches that are black/white hispanic/white missmatched\n",
+    "race_bool_1 = (balanced_match['black_x'] == 1) & (balanced_match['black_y'] == 0)\n",
+    "#this removes black hispanic pairs??? is this what you want???\n",
+    "#tell me why...\n",
+    "#race_bool_2 = (balanced_match['black_x'] == 1) & (balanced_match['hispan_y'] == 1)\n",
+    "#other syntax didn't work\n",
+    "balanced_match = balanced_match.drop(balanced_match[race_bool_1].index)\n",
+    "#balanced_match = balanced_match.drop(balanced_match[race_bool_2].index)\n",
     "print('we have : ', len(balanced_match), ' matched subjects')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "race_u = balanced_match.groupby('black_y')['id_y'].count()\n",
-    "u_race_rates = (race_u[0]/race_u.sum(), race_u[1]/race_u.sum())\n",
-    "race_t = balanced_match.groupby('black_x')['id_x'].count()\n",
-    "t_race_rates = (race_t[0]/race_t.sum(), race_t[1]/race_t.sum())\n",
-    "race_labels = ('black', 'other race')"
+    "We now check if the data set is more balanced:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "compare_groups(balanced_match)"
+    "compare_groups(balanced_match)\n",
+    "#but now married is mismatched smh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_groups(table) :\n",
+    "    \"\"\"\n",
+    "    Compares groups in merged dataframe\n",
+    "    table : dataframe to compare treated and untreated in\n",
+    "    \"\"\"\n",
+    "    columns = ['untreated', 'treated']\n",
+    "    #index = ['age', 'educ', 'black', 'hisp', 'married', 'no_degree']\n",
+    "    index = ['black', 'hisp', 'married', 'no_degree']\n",
+    "    result = pd.DataFrame(columns=columns, index=index)\n",
+    "    #result['untreated']['age'] = table['age_y'].mean()\n",
+    "    #result['untreated']['educ'] = table['educ_y'].mean()\n",
+    "    result['untreated']['black'] = table['black_y'].mean()\n",
+    "    result['untreated']['hisp'] = table['hispan_y'].mean()\n",
+    "    result['untreated']['married'] = table['married_y'].mean()\n",
+    "    result['untreated']['no_degree'] = table['nodegree_y'].mean()\n",
+    "    #result['treated']['age'] = table['age_x'].mean()\n",
+    "    #result['treated']['educ'] = table['educ_x'].mean()\n",
+    "    result['treated']['black'] = table['black_x'].mean()\n",
+    "    result['treated']['hisp'] = table['hispan_x'].mean()\n",
+    "    result['treated']['married'] = table['married_x'].mean()\n",
+    "    result['treated']['no_degree'] = table['nodegree_x'].mean()\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "#####mean isn't perfectly accurate!!!!!!!!!\n",
+    "#####it doesn't tell us about variance etc\n",
+    "####only use it for binary variables\n",
+    "####look at what I did for 4"
    ]
   },
   {
@@ -1141,50 +1139,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "marriage_u = balanced_match.groupby('married_y')['id_y'].count()\n",
-    "u_marriage_rates = (marriage_u[0]/marriage_u.sum(), marriage_u[1]/marriage_u.sum())\n",
-    "marriage_t = balanced_match.groupby('married_x')['id_x'].count()\n",
-    "t_marriage_rates = (marriage_t[0]/marriage_t.sum(), marriage_t[1]/marriage_t.sum())\n",
-    "marriage_labels = ('married', 'not married')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "compare_groups(balanced_match)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#removing outliers\n",
-    "balanced_match = balanced_match.drop(balanced_match[balanced_match.re78_x > 30000].index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "compare_groups(balanced_match)"
+    "The match seems balanced blah blah"
    ]
   },
   {
@@ -1193,16 +1158,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.boxplot([balanced_match['re78_x'], balanced_match['re78_y']], showfliers=False)\n",
-    "plt.show()"
+    "#removing outliers - no need\n",
+    "#balanced_match = balanced_match.drop(balanced_match[balanced_match.re78_x > 30000].index)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boxplot_treat_untreat(balanced_match['re78_x'], balanced_match['re78_y'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "stats = pd.concat([balanced_match.re78_y.describe(),balanced_match.re78_x.describe()], axis=1)\n",
@@ -1221,7 +1193,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After controlling for unerlying factors we see that the treated population fares better than the untreated population"
+    "Compare the outcomes (`re78`) between treated and control subjects, as you've done in part 1, but now only for the matched dataset you've obtained from part 5.\n",
+    "What do you conclude about the effectiveness of the job training program?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boxplot_treat_untreat(balanced_match['re78_x'], balanced_match['re78_y'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After controlling for unerlying factors we see that the treated population fares better than the untreated population, which we can see as the overall distribution of the salary in the two groups is moved up."
    ]
   },
   {
@@ -1243,9 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create the TF-IDF vectorizer\n",
@@ -1255,9 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import the data we need to use the vectorizer on. Remove metadata as proposed by sci-kit tutorial\n",
@@ -1274,9 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# vectors is a sparse matrix\n",
@@ -1294,7 +1277,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1335,9 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "metrics.accuracy_score(pred, newsgroups_valid)"
@@ -1359,9 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# We create a DF to be able to use all this data effectively\n",
@@ -1371,9 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "rows = []\n",
@@ -1464,9 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "clf = RandomForestClassifier(n_estimators=800, max_depth=47, random_state=1)\n",
@@ -1478,9 +1452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "metrics.accuracy_score(pred, newsgroups_valid)"
@@ -1496,9 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pred_test = clf.predict(vect_valid)\n",
@@ -1517,9 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.DataFrame(cm)\n",
@@ -1539,9 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#get names of features and their importance\n",
@@ -1560,9 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.hist(clf.feature_importances_, bins=50)\n",
@@ -1575,7 +1539,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1589,7 +1553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
