--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We define custom chart drawing functions we reuse a lot:"
+    "We define long custom chart drawing and comparison functions we reuse a lot:"
    ]
   },
   {
@@ -59,6 +59,42 @@
     "    plt.axis('equal')\n",
     "    plt.title(\"treated group\")\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_groups(table) :\n",
+    "    \"\"\"\n",
+    "    Compares groups in merged dataframe\n",
+    "    table : dataframe to compare treated and untreated in\n",
+    "    \"\"\"\n",
+    "    columns = ['untreated', 'treated']\n",
+    "    #index = ['age', 'educ', 'black', 'hisp', 'married', 'no_degree']\n",
+    "    index = ['black', 'hisp', 'married', 'no_degree']\n",
+    "    result = pd.DataFrame(columns=columns, index=index)\n",
+    "    #result['untreated']['age'] = table['age_y'].mean()\n",
+    "    #result['untreated']['educ'] = table['educ_y'].mean()\n",
+    "    result['untreated']['black'] = table['black_y'].mean()\n",
+    "    result['untreated']['hisp'] = table['hispan_y'].mean()\n",
+    "    result['untreated']['married'] = table['married_y'].mean()\n",
+    "    result['untreated']['no_degree'] = table['nodegree_y'].mean()\n",
+    "    #result['treated']['age'] = table['age_x'].mean()\n",
+    "    #result['treated']['educ'] = table['educ_x'].mean()\n",
+    "    result['treated']['black'] = table['black_x'].mean()\n",
+    "    result['treated']['hisp'] = table['hispan_x'].mean()\n",
+    "    result['treated']['married'] = table['married_x'].mean()\n",
+    "    result['treated']['no_degree'] = table['nodegree_x'].mean()\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "#####mean isn't perfectly accurate!!!!!!!!!\n",
+    "#####it doesn't tell us about variance etc\n",
+    "####only use it for binary variables, then it gives us percentages\n",
+    "###use other function for interval data"
    ]
   },
   {
@@ -1061,7 +1097,7 @@
    "source": [
     "#matches that are black/white hispanic/white missmatched\n",
     "race_bool_1 = (balanced_match['black_x'] == 1) & (balanced_match['black_y'] == 0)\n",
-    "#this removes black hispanic pairs??? is this what you want???\n",
+    "#this removes black hispanic pairs??? is this what you want??? it actuay doesn't change anything at all anyway\n",
     "#tell me why...\n",
     "#race_bool_2 = (balanced_match['black_x'] == 1) & (balanced_match['hispan_y'] == 1)\n",
     "#other syntax didn't work\n",
@@ -1093,34 +1129,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compare_groups(table) :\n",
-    "    \"\"\"\n",
-    "    Compares groups in merged dataframe\n",
-    "    table : dataframe to compare treated and untreated in\n",
-    "    \"\"\"\n",
-    "    columns = ['untreated', 'treated']\n",
-    "    #index = ['age', 'educ', 'black', 'hisp', 'married', 'no_degree']\n",
-    "    index = ['black', 'hisp', 'married', 'no_degree']\n",
-    "    result = pd.DataFrame(columns=columns, index=index)\n",
-    "    #result['untreated']['age'] = table['age_y'].mean()\n",
-    "    #result['untreated']['educ'] = table['educ_y'].mean()\n",
-    "    result['untreated']['black'] = table['black_y'].mean()\n",
-    "    result['untreated']['hisp'] = table['hispan_y'].mean()\n",
-    "    result['untreated']['married'] = table['married_y'].mean()\n",
-    "    result['untreated']['no_degree'] = table['nodegree_y'].mean()\n",
-    "    #result['treated']['age'] = table['age_x'].mean()\n",
-    "    #result['treated']['educ'] = table['educ_x'].mean()\n",
-    "    result['treated']['black'] = table['black_x'].mean()\n",
-    "    result['treated']['hisp'] = table['hispan_x'].mean()\n",
-    "    result['treated']['married'] = table['married_x'].mean()\n",
-    "    result['treated']['no_degree'] = table['nodegree_x'].mean()\n",
-    "    return result\n",
-    "\n",
-    "\n",
-    "#####mean isn't perfectly accurate!!!!!!!!!\n",
-    "#####it doesn't tell us about variance etc\n",
-    "####only use it for binary variables\n",
-    "####look at what I did for 4"
+    "def plot_blanced_interval(df):\n",
+    "    df1 = df.iloc[:,:11]\n",
+    "    df2 = df.iloc[:, 13:-3]\n",
+    "    df2.columns = lalonde_df.columns\n",
+    "    df1.columns = lalonde_df.columns\n",
+    "    balanced_df = pd.concat([df1, df2])\n",
+    "    intervall_plots(balanced_df)\n",
+    "    \n",
+    "plot_blanced_interval(balanced_match)"
    ]
   },
   {
@@ -1153,13 +1170,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#removing outliers - no need\n",
-    "#balanced_match = balanced_match.drop(balanced_match[balanced_match.re78_x > 30000].index)"
+    "We look at intervall data and see blah blah"
    ]
   },
   {
@@ -1168,7 +1182,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boxplot_treat_untreat(balanced_match['re78_x'], balanced_match['re78_y'])"
+    "plot_blanced_interval(balanced_match)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "finaly we remove outliers from the lucky few from the treatment set"
    ]
   },
   {
@@ -1177,9 +1198,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats = pd.concat([balanced_match.re78_y.describe(),balanced_match.re78_x.describe()], axis=1)\n",
-    "stats.columns = ['untreated', 'treated']\n",
-    "stats"
+    "#removing outliers - no need unless looking at mean\n",
+    "balanced_match = balanced_match.drop(balanced_match[balanced_match.re78_x > 30000].index)"
    ]
   },
   {
@@ -1207,6 +1227,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = pd.concat([balanced_match.re78_y.describe(),balanced_match.re78_x.describe()], axis=1)\n",
+    "stats.columns = ['untreated', 'treated']\n",
+    "stats"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1226,7 +1257,10 @@
    "source": [
     "First, we need to compute the TF-IDF features of our dataset, using a vectorizer. As we understood the question, what was asked was not to use any of the given datasets from sklearn, but to use all of the data. Thus, we do not use the train and test subsets given to us in sklearn, but will create our own such subsets, adding a validation subset.\n",
     "\n",
-    "Also note that we remove the headers, footers and quotes, as proposed in the <a href=\"http://scikit-learn.org/stable/datasets/twenty_newsgroups.html\">sklearn tutorial</a> of the dataset, as to have something more realistic and without any of the metadata. Note also that we did not use the *sklearn.datasets.fetch_20newsgroups_vectorized* function that returns the TF-IDF features directly, as it would defeat the purpose of the exercise."
+    "Also note that we **remove the headers, footers and quotes**, as proposed in the <a href=\"http://scikit-learn.org/stable/datasets/twenty_newsgroups.html\">sklearn tutorial</a> of the dataset, as to have something more realistic and without any of the metadata. \n",
+    "This significantly decreases our accuracy, as we show later.\n",
+    "\n",
+    "Note also that we did not use the *sklearn.datasets.fetch_20newsgroups_vectorized* function that returns the TF-IDF features directly, as it would defeat the purpose of the exercise."
    ]
   },
   {
@@ -1246,7 +1280,8 @@
    "outputs": [],
    "source": [
     "# Import the data we need to use the vectorizer on. Remove metadata as proposed by sci-kit tutorial\n",
-    "newsgroups_all = fetch_20newsgroups(subset='all', remove=('headers', 'footers', 'quotes'))"
+    "newsgroups_all = fetch_20newsgroups(subset='all', remove=('headers', 'footers', 'quotes'))\n",
+    "newsgroups_with_headera = fetch_20newsgroups(subset='all')"
    ]
   },
   {
