--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -1623,8 +1623,8 @@
    "source": [
     "plt.hist(clf.feature_importances_, bins=50)\n",
     "#note the og scale!\n",
-    "plt.yscale('log histogram for feature importance')\n",
-    "plt.title(feature important)\n",
+    "plt.yscale('log')\n",
+    "plt.title(' histogram for feature importance')\n",
     "plt.xlabel('importance by feature')\n",
     "plt.ylabel('Number of features (log)');"
    ]
